
  * AMC-TXT: New group option 'needspace'

  * Bug fixes

1.3.0 (2016-03-16)

  * New \AMCsetFoot LaTeX command

  * New package option asbox

  * New LaTeX commands AMCaddpagesto, insertgroupfrom, copygroupfrom

  * Mailing log, button tu select failed sendings for next mailing

  * New printing method CUPSlp

  * Handles multiple stapling (or other) printer options.

  * Option to get separate answer sheet first when printing.

  * Allows students to cancel their ticks by filling the boxes,
	using the upper darkness threshold parameter.

  * Adds AMC-TXT options NameField*, TitleWidth.

  * storebox package option

  * Warnings when using question IDs with accents.

  * Compatibility with cleveref.

  * Font can now be specified for annotations.

  * Adds \AMCsetScoreZone and \AMCsetScoreZoneAnswerSheet LaTeX commands

  * Allows to annotate question pages in separate answer sheet mode

  * New LaTeX command \setgroupmode

  * Can choose between drag and drop and click to toggle boxes state
    in zooms window

  * Adds null mark parameter, for example for swiss mark system
    (marks from 1 to 6)

  * New LaTeX commands \AMCboxOutsideLetter, \explain

  * New option set_multiple for postcorrection

  * New \AMCBoxOnly command

  * AMC-TXT IncludeFile

  * direct PDF drawings for annotation

  * can now process scans with 3 corner marks instead of 4

  * AMC-TXT groups

  * set.INVALID special behavior

  * Stats (ODS) table can now be built with a vertical flow

  * New question/group options 'first', 'next', 'last'  for AMC-TXT

  * New AMC-TXT global options CodeDigitsDirection and AutoMarks

  * Adds an index in capture database to get linear time for marking
    process

  * Adds indicative question option for AMC-TXT

1.2.0 (2013-04-17)

  * Catalog can now be built from GUI

  * New automarks package option

  * Open questions for AMC-TXT

  * Adds \AMCqlabel command

  * Manual association can now be driven from the keyboard
