@@ -565,6 +565,23 @@ lesquels sont positifs ?
         </varlistentry>
 
         <varlistentry>
+          <term>Pages:</term>
+
+          <listitem>
+            <para>Donne un nombre de pages minimal pour le sujet. Si un sujet
+            comporte moins de pages que cette valeur, des pages blanches
+            seront ajoutées. Dans le cas de l'utilisation d'une feuille de
+            réponses séparée, cette option peut être écrite sous la forme
+            <option><replaceable>s</replaceable>+<replaceable>r</replaceable></option>
+            (par exemple <option>4+2</option>), où
+            <replaceable>s</replaceable> sera le nombre de pages minimal pour
+            la partie sujet et
+            <replaceable>s</replaceable>+<replaceable>r</replaceable> le
+            nombre de pages minimal pour le sujet complet.</para>
+          </listitem>
+        </varlistentry>
+
+        <varlistentry>
           <term>ManualDuplex:</term>
 
           <listitem>
