@@ -1,3 +1,4 @@
+  * AMC-TXT: new option Pages
 
   * AMC-TXT: New group option 'needspace'
 
